--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Link Finder</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/dist/css/styles.css" rel="stylesheet">
