--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -11,29 +11,29 @@
 	</div>
 	<div class="col-sm-3 col-xs-6">
 		<div>
-			<label>Domain authority >=</label>
+			<label><input type="checkbox" ng-model="enableTrustFlow"></input> Trust Flow >=</label>
 		</div>
 		<div>
-			<input placeholder="input a number from 1-100..." style="width:100%" class="form-control" ng-model="domainAuthority" type="text"></input>
+			<input ng-disabled="!enableTrustFlow" placeholder="input a number from 1-100..." style="width:100%" class="form-control" ng-model="trustFlow" type="text"></input>
 		</div>
 	</div>
 	<div class="col-sm-3 col-xs-6">
 		<div>
-			<label>Referring URL contains:</label>
+			<label><input type="checkbox" ng-model="enableReferringUrl"></input> Referring URL contains:</label>
 		</div>
-		<input placeholder="e.g. spamsite.net" style="width:100%" class="form-control" ng-model="referringUrlContains" type="text"></input>
+		<input ng-disabled="!enableReferringUrl" placeholder="e.g. spamsite.net" style="width:100%" class="form-control" ng-model="referringUrlContains" type="text"></input>
 	</div>
 	<div class="col-sm-3 col-xs-6">
 		<div>
-			<label>Target URL contains:</label>
+			<label><input type="checkbox" ng-model="enableTargetUrl"></input> Target URL contains:</label>
 		</div>
 		<div>
-		<input placeholder="e.g. /dallas-tx/" style="width:100%" class="form-control" ng-model="targetUrlContains" type="text"></input>
+		<input ng-disabled="!enableTargetUrl" placeholder="e.g. /dallas-tx/" style="width:100%" class="form-control" ng-model="targetUrlContains" type="text"></input>
 		</div>
 	</div>
 </div>
 <div class="row">
 	<div class="col-xs-12 get-backlinks-button-wrapper">
-		<button ng-click="getBacklinks()" class="btn btn-success get-backlinks-button">Get Backlinks</button>
+		<button ng-click="getBacklinks()" ng-disabled="!tableName" class="btn btn-success get-backlinks-button">Get Backlinks</button>
 	</div>
 </div>
