--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -37,3 +37,23 @@
 		<button ng-click="getBacklinks()" ng-disabled="!tableName" class="btn btn-success get-backlinks-button">Get Backlinks</button>
 	</div>
 </div>
+<div class="row">
+<dtable options="options" rows="data" class="material dt">
+  <column name="Anchor Text" width="300" flex-grow="2">
+	<strong>{{$row.anchor_text}}</strong>
+  </column>
+  <column name="NoFollow?" width="50" flex-grow="2">
+	<strong>{{$row.flag_no_follow}}</strong>
+  </column>
+  <column name="Source URL" width="50" flex-grow="2">
+	<strong>{{$row.source_url}}</strong>
+  </column>
+	<column name="Target URL" width="50" flex-grow="2">
+	<strong>{{$row.target_url}}</strong>
+  </column>
+  </column>
+	<column name="Domain Topical Trust Flow" width="50" flex-grow="2">
+	<strong>{{$row.ref_domain_topical_trust_flow_value}}</strong>
+  </column>
+</dtable>
+</div>
