--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -32,28 +32,37 @@
 		</div>
 	</div>
 </div>
+<div class="row field-selector-wrapper">
+    <label class="col-xs-4 col-sm-3" ng-repeat="field in fields">
+        <div class="checkbox-div">
+        <input type="checkbox" checklist-model="selectedFields" checklist-value="field.value">
+        </div>
+        <div class="checkbox-value">
+        {{field.label}}
+        </div>
+    </label>
+</div>
 <div class="row">
 	<div class="col-xs-12 get-backlinks-button-wrapper">
 		<button ng-click="getBacklinks()" ng-disabled="!tableName" class="btn btn-success get-backlinks-button">Get Backlinks</button>
 	</div>
 </div>
-<div class="row">
+<div class="row" id="data-table-wrapper">
 <dtable options="options" rows="data" class="material dt">
-  <column name="Anchor Text" width="300" flex-grow="2">
-	<strong>{{$row.anchor_text}}</strong>
-  </column>
-  <column name="NoFollow?" width="50" flex-grow="2">
-	<strong>{{$row.flag_no_follow}}</strong>
-  </column>
-  <column name="Source URL" width="50" flex-grow="2">
-	<strong>{{$row.source_url}}</strong>
-  </column>
+	<column name="Anchor Text" width="300" flex-grow="2">
+		<strong>{{$row.anchor_text}}</strong>
+	</column>
+	<column name="NoFollow?" width="50" flex-grow="2">
+		<strong>{{$row.flag_no_follow}}</strong>
+	</column>
+	<column name="Source URL" width="50" flex-grow="2">
+		<strong>{{$row.source_url}}</strong>
+	</column>
 	<column name="Target URL" width="50" flex-grow="2">
-	<strong>{{$row.target_url}}</strong>
-  </column>
-  </column>
+		<strong>{{$row.target_url}}</strong>
+	</column>
 	<column name="Domain Topical Trust Flow" width="50" flex-grow="2">
-	<strong>{{$row.ref_domain_topical_trust_flow_value}}</strong>
-  </column>
+		<strong>{{$row.ref_domain_topical_trust_flow_value}}</strong>
+	</column>
 </dtable>
 </div>
