--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="col-sm-3 col-xs-6">
 		<div>
-			<label><input type="checkbox" ng-model="enableReferringUrl"></input> Referring URL contains:</label>
+			<label><input type="checkbox" ng-model="enableReferringUrl"></input> Source URL contains:</label>
 		</div>
 		<input ng-disabled="!enableReferringUrl" placeholder="e.g. spamsite.net" style="width:100%" class="form-control" ng-model="referringUrlContains" type="text"></input>
 	</div>
