--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -33,12 +33,12 @@
 	</div>
 </div>
 <div class="row field-selector-wrapper">
-    <label class="col-xs-4 col-sm-3" ng-repeat="field in fields">
+    <label class="col-xs-6 col-sm-3" ng-repeat="field in fields">
         <div class="checkbox-div">
-        <input type="checkbox" checklist-model="selectedFields" checklist-value="field.value">
+        	<input type="checkbox" checklist-model="selectedFields" checklist-value="field">
         </div>
         <div class="checkbox-value">
-        {{field.label}}
+        {{field.name}}
         </div>
     </label>
 </div>
@@ -48,21 +48,6 @@
 	</div>
 </div>
 <div class="row" id="data-table-wrapper">
-<dtable options="options" rows="data" class="material dt">
-	<column name="Anchor Text" width="300" flex-grow="2">
-		<strong>{{$row.anchor_text}}</strong>
-	</column>
-	<column name="NoFollow?" width="50" flex-grow="2">
-		<strong>{{$row.flag_no_follow}}</strong>
-	</column>
-	<column name="Source URL" width="50" flex-grow="2">
-		<strong>{{$row.source_url}}</strong>
-	</column>
-	<column name="Target URL" width="50" flex-grow="2">
-		<strong>{{$row.target_url}}</strong>
-	</column>
-	<column name="Domain Topical Trust Flow" width="50" flex-grow="2">
-		<strong>{{$row.ref_domain_topical_trust_flow_value}}</strong>
-	</column>
-</dtable>
+	<dtable options="options" rows="data" class="material dt">
+	</dtable>
 </div>
