added backlinks found div and button

--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -50,6 +50,10 @@
 		<button ng-click="getBacklinks()" ng-disabled="!tableName" class="btn btn-success get-backlinks-button">Get Backlinks</button>
 	</div>
 </div>
+<div class="row csv-wrapper" ng-if="data.length">
+	<span><label>Backlinks Found: {{data.length}}</label></span>
+	<button type="button">download .csv</button>
+</div>
 <div class="row data-table-wrapper" id="data-table-wrapper">
 	<dtable options="options" rows="data" class="material dt">
 	</dtable>
