--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     <link href="/dist/css/styles.css" rel="stylesheet">
   </head>
 
-  <body ng-app="linkFinder">
+  <body ng-app="linkFinder" ng-controller="NavbarController">
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -31,8 +31,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a>Home</a></li>
-            <li><a href="http://www.movoto.com">Movoto</a></li>
+            <li class="active" ng-if="!username" ng-click="logIn()"><a>Log In</a></li>
+            <li ng-if="username"><a>{{username}}</a></li>
+            <li ng-if="username"><a ng-click="logOut()">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
