token and username now persist in user session

--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -47,7 +47,7 @@
 </div>
 <div class="row">
 	<div class="col-xs-12 get-backlinks-button-wrapper">
-		<button ng-click="getBacklinks()" ng-disabled="!tableName||!auth.token" class="btn btn-success get-backlinks-button">Get Backlinks</button>
+		<button ng-click="getBacklinks()" ng-disabled="!tableName||!$storage.auth.token" class="btn btn-success get-backlinks-button">Get Backlinks</button>
 	</div>
 </div>
 <div class="row csv-wrapper" ng-if="data.length">
