--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -40,7 +40,7 @@
 	        	<input type="checkbox" checklist-model="selectedFields" checklist-value="field">
 	        </div>
 	        <div class="checkbox-value">
-	        {{field.name}}
+	        {{field.name}} <span ng-if="fieldsLastFetched.indexOf(field)>-1" class="fetch-success">FETCHED</span>
 	        </div>
 	    </label>
 	</div>
