renamed domainsandfields and factored out table options into factory/service

--- a/client/lib/html/getLinks.html
+++ b/client/lib/html/getLinks.html
@@ -60,6 +60,6 @@
 	</div>
 </div>
 <div ng-show="!loading" class="row data-table-wrapper" id="data-table-wrapper">
-	<dtable options="options" rows="data" class="material dt">
+	<dtable options="tableOptions" rows="data" class="material dt">
 	</dtable>
 </div>
