--- a/client/index.html
+++ b/client/index.html
@@ -16,9 +16,9 @@
     <link href="/dist/css/styles.css" rel="stylesheet">
   </head>
 
-  <body ng-app="linkFinder" ng-controller="NavbarController">
+  <body ng-app="linkFinder" class="as-bg-grey" ng-controller="NavbarController">
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top as-bg-blue">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -27,22 +27,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand">Link Finder</a>
+          <a class="navbar-brand link-hover">Link Finder</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active" ng-if="!username" ng-click="logIn()"><a>Log In</a></li>
-            <li ng-if="username"><a>{{username}}</a></li>
-            <li ng-if="username"><a ng-click="logOut()">Log Out</a></li>
+            <li class="active" ng-if="!username" ng-click="logIn()"><a class="link-hover">Log In</a></li>
+            <li ng-if="username"><a class="link-hover">{{username}}</a></li>
+            <li ng-if="username"><a  class="link-hover" ng-click="logOut()">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container as-bg-white">
 
       <div class="starter-template">
-        <h1>Link Finder</h1>
+        <h1 class="as-blue">Link Finder</h1>
         <ng-view></ng-view>
       </div>
 
